# pulsewire

./: .gitignore  .rumdl.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  about.toml  biome.json  cliff.toml  docker-compose.yml  justfile  lychee.toml  release.toml  taplo.toml  typos.toml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/app/: context.rs
core/src/app/scheduler/: actions.rs  mod.rs  state.rs
core/src/domain/: hashing.rs  model.rs
core/src/feed/: mod.rs  parser.rs
core/src/infra/: database.rs  reqwest_http.rs
core/src/infra/config/: mod.rs  paths.rs  raw.rs  schema.rs
core/src/infra/postgres_repo/: error_feeds.rs  util.rs
core/src/infra/sqlite_repo/: models.rs
core/tests/: link_state.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/res/sql/postgres/: schema.sql
crates/core/res/sql/sqlite/: schema.sql
crates/core/src/app/: context.rs  mod.rs
crates/core/src/app/scheduler/: actions.rs  concurrency.rs  orchestrator.rs  processing.rs  state.rs
crates/core/src/domain/: hashing.rs  link_state.rs  mod.rs  model.rs
crates/core/src/feed/: mod.rs  parser.rs
crates/core/src/infra/: database.rs  logging.rs  metrics.rs  mod.rs  random.rs  reqwest_http.rs  system_clock.rs  time.rs
crates/core/src/infra/config/: defaults.rs  feeds.rs  loader.rs  mod.rs  parse.rs  paths.rs  raw.rs  schema.rs
crates/core/src/infra/metrics/: histogram.rs  mod.rs  render.rs  server.rs
crates/core/src/infra/postgres_repo/: connection.rs  cookies.rs  error_feeds.rs  events.rs  feeds.rs  migrations.rs  mod.rs  models.rs  payloads.rs  state.rs  util.rs
crates/core/src/infra/sqlite_repo/: connection.rs  cookies.rs  error_feeds.rs  events.rs  feeds.rs  migrations.rs  mod.rs  models.rs  payloads.rs  state.rs  util.rs
crates/core/src/ports/: clock.rs  http.rs  mod.rs  random.rs  repo.rs
crates/core/tests/: link_state.rs
crates/fetcher/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/fetcher/res/: categories.toml  config.toml  docker.toml  domains.toml
crates/fetcher/res/feeds/books/: global.oup.com.toml
crates/fetcher/res/feeds/finance/: bloomberg.com.toml  coindesk.com.toml  cointelegraph.coml.toml  gothamcityresearch.com.toml  hindenburgresearch.com.toml  morningstar.com.toml  reuters.com.toml  seekingalpha.toml
crates/fetcher/res/feeds/gov/: bls.gov.toml  federalreserve.gov.toml  govinfo.gov.toml  sec.gov.toml
crates/fetcher/res/feeds/journals/: arxiv.gov.toml
crates/fetcher/res/feeds/news/: cnn.toml  nytimes.toml  politico.toml  postmillenial.toml  wapo.toml  wsj.toml
crates/fetcher/res/feeds/podcasts/: audacity.toml  audiochuck.toml  bbc.toml  becauselanguage.toml  bloomberg.toml  economist.toml  goldmansachs.toml  iheart.toml  nbc.toml  new-york-times.toml  newbooksnetwork.toml  npr.toml  stack.toml  the-guardian.toml  vox.toml  wondery.toml
crates/fetcher/res/feeds/tech/: arstechnica.com.toml  hnrss.org.toml  slashdot.org.toml  xkcd.com.toml
crates/fetcher/res/feeds/youtube.com/: custom.toml  global.toml  mysubs.toml  xaa.toml  xab.toml  xac.toml  xad.toml  xae.toml  xaf.toml  xag.toml  xah.toml  xai.toml  xaj.toml  xak.toml  xal.toml  xam.toml  xan.toml  xao.toml  xap.toml  xaq.toml  xar.toml  xas.toml  xat.toml  xau.toml  xav.toml  xaw.toml  xax.toml  xay.toml  xaz.toml  xba.toml  xbb.toml  xbc.toml  xbd.toml  xbe.toml  xbf.toml  xbg.toml  xbh.toml  xbi.toml  xbj.toml  xbk.toml  (+54 more)
crates/fetcher/res/schemas/: categories.schema.json  config.schema.json  domains.schema.json  feeds.schema.json  global.schema.json
crates/fetcher/src/: main.rs
crates/schemas/: Cargo.toml
crates/schemas/fetcher/: config.schema.json
crates/schemas/server/: server.schema.json
crates/schemas/src/: lib.rs
crates/server/: Cargo.toml  Dockerfile  docker-compose.yml
crates/server/res/: config.toml  docker.toml  openapi.html  openapi.json
crates/server/res/schemas/: server.schema.json
crates/server/res/sql/postgres/: schema.sql
crates/server/res/sql/sqlite/: schema.sql
crates/server/src/: app_state.rs  auth.rs  config.rs  db.rs  errors.rs  handlers.rs  logging.rs  main.rs  models.rs  schema.rs  startup.rs
crates/server/src/handlers/: auth.rs  docs.rs  entries.rs  favorites.rs  feeds.rs  folders.rs  health.rs  mod.rs  subscriptions.rs  users.rs
crates/server/src/handlers/entries/: batch.rs  counts.rs  detail.rs  list.rs  mod.rs  read_state.rs  search.rs
crates/tui/: Cargo.toml  README.md
crates/tui/res/: config.toml
crates/tui/res/schemas/: tui.schema.json
crates/tui/src/: app.rs  config.rs  main.rs  models.rs  ui.rs
crates/tui/src/app/: background.rs  details.rs  entries.rs  filters.rs  folders.rs  mod.rs  modal.rs  pagination.rs  sort.rs  state.rs
crates/tui/src/app/api/: entries.rs  favorites.rs
crates/tui/src/app/input/: main.rs  mod.rs  navigation.rs  text.rs
crates/tui/src/ui/: detail.rs  layout.rs  lists.rs  modal.rs
docs/: RELEASE.md
docs/ai/: POST-CHANGES.md  README.md  RUST.md
docs/pulsewire/: ROADMAP.md  THIRD_PARTY_LICENSES.md  ad-hoc-site.md  ad-hoc.md
docs/reference/tools/: hyperfine.md
fetcher/: Cargo.toml  Dockerfile
fetcher/res/: categories.toml  docker.toml
fetcher/res/feeds/: arxiv.gov.toml
fetcher/res/schemas/: config.schema.json  domains.schema.json
fetcher/src/: lib.rs  main.rs
fetcher/src/app/: mod.rs
fetcher/src/domain/: link_state.rs  mod.rs
fetcher/src/infra/: metrics.rs  mod.rs  random.rs
fetcher/tests/: link_state.rs
res/: categories.toml  config.toml  docker.toml  domains.toml
res/feeds/: arxiv.gov.toml  bls.gov.toml  tradingeconomics.com.toml
res/schemas/: categories.schema.json  feeds.schema.json
scripts/: post-change.sh
src/: main.rs
src/app/: context.rs  mod.rs  scheduler.rs
src/domain/: hashing.rs  link_state.rs  mod.rs  model.rs
src/feed/: parser.rs
src/infra/: config.rs  logging.rs  mod.rs  random.rs  reqwest_http.rs  sqlite_repo.rs  system_clock.rs  time.rs
src/ports/: clock.rs  http.rs  mod.rs  random.rs  repo.rs
tests/: link_state.rs
(+211 files in other folders)
