[package]
name = "feedrv3"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time", "fs", "sync"] }
futures = "0.3.31"

serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8"

thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

sha2 = "0.10"
hex = "0.4"

feed-rs = "1.4"

rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
proptest = "1.5"
