[package]
name = "feedrv3-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "feedrv3-cli"
path = "src/main.rs"

[dependencies]
feedrv3-core = { path = "../core" }
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs"] }
