[package]
name = "feedrv3-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49.0", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "fs",
  "sync",
] }
futures = "0.3.31"

serde = { version = "1.0.228", features = [
  "derive",
] }
toml = "0.9.11"
serde_json = "1.0.149"
jsonschema = "0.38.1"

thiserror = "2.0.17"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "fmt",
] }
tracing-appender = "0.2.4"

reqwest = { version = "0.13.1", default-features = false, features = [
  "rustls",
  "gzip",
  "brotli",
  "deflate",
] }

sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "sqlite",
  "postgres",
  "macros",
  "chrono",
] }

chrono = { version = "0.4.42", features = [
  "serde",
] }
chrono-tz = "0.10.4"

sha2 = "0.10.9"
hex = "0.4.3"

feed-rs = "2.3.1"

rand = "0.9.2"
async-trait = "0.1.89"

[dev-dependencies]
proptest = "1.9.0"
