[package]
edition = "2024"
name    = "feedrv3-cli"
version = "0.1.0"

[[bin]]
name = "feedrv3-cli"
path = "src/main.rs"

[dependencies]
clap = { features = [
  "derive",
], version = "4.5.54" }
feedrv3-core = { path = "../core" }
tokio = { features = [
  "fs",
  "macros",
  "rt-multi-thread",
], version = "1.49.0" }
