[package]
edition = "2024"
name    = "pulsewire-cli"
version = "0.1.0"

[[bin]]
name = "pulsewire-cli"
path = "src/main.rs"

[dependencies]
clap = { features = [
  "derive",
], version = "4.5.54" }
pulsewire-core = { path = "../core" }
tokio = { features = [
  "fs",
  "macros",
  "rt-multi-thread",
], version = "1.49.0" }
