[package]
edition = "2024"
license = "MIT"
name    = "pulsewire-core"
version = { workspace = true }

[dependencies]
futures = "0.3.31"
tokio = { features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
], version = "1.49.0" }

jsonschema = "0.38.1"
serde = { features = [
  "derive",
], version = "1.0.228" }
serde_json = "1.0.149"
toml = "0.9.11"

thiserror = "2.0.17"

tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { features = [
  "env-filter",
  "fmt",
], version = "0.3.22" }

reqwest = { default-features = false, features = [
  "brotli",
  "cookies",
  "deflate",
  "gzip",
  "rustls",
], version = "0.13.1" }

sqlx = { features = [
  "chrono",
  "macros",
  "postgres",
  "runtime-tokio",
  "sqlite",
], version = "0.8.6" }

chrono = { features = [
  "serde",
], version = "0.4.42" }
chrono-tz = "0.10.4"

hex  = "0.4.3"
sha2 = "0.10.9"

feed-rs = "2.3.1"
scraper = "0.24.0"

async-trait = "0.1.89"
rand        = "0.9.2"

[dev-dependencies]
proptest = "1.9.0"
