[package]
edition = "2024"
name    = "pulsewire-fetcher"
version = { workspace = true }
license = "MIT"

[[bin]]
name = "pulsewire"
path = "src/main.rs"

[dependencies]
pulsewire-core = { path = "../core" }
tokio = { features = [
  "macros",
  "rt-multi-thread",
], version = "1.49.0" }
tracing = "0.1.44"
