[package]
name = "feedrv3-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.49.0", features = [
  "macros",
  "rt-multi-thread",
  "net",
] }
serde = { version = "1.0.228", features = [
  "derive",
] }
toml = "0.9.11"
serde_json = "1.0.149"
jsonschema = "0.38.1"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "fmt",
] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "sqlite",
  "postgres",
] }
argon2 = "0.5.3"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = { version = "0.4.42", features = ["serde"] }

