[package]
edition = "2024"
name    = "pulsewire-server"
version = { workspace = true }
license = "MIT"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
chrono = { features = [
  "serde",
], version = "0.4.42" }
hex = "0.4.3"
jsonschema = "0.38.1"
serde = { features = [
  "derive",
], version = "1.0.228" }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { features = [
  "postgres",
  "runtime-tokio",
  "sqlite",
], version = "0.8.6" }
thiserror = "2.0.17"
tokio = { features = [
  "macros",
  "net",
  "rt-multi-thread",
], version = "1.49.0" }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { features = [
  "env-filter",
  "fmt",
], version = "0.3.22" }
