[package]
edition = "2024"
license = "MIT"
name    = "pulsewire-tui"
version = { workspace = true }

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
jsonschema = "0.38"
ratatui = "0.29"
reqwest = { default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
], version = "0.12" }
serde = { features = [
  "derive",
], version = "1.0" }
serde_json = "1.0"
toml = "0.9"
